--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="ระบบ POS สำหรับร้านค้าชุมชน ช่วยให้ร้านทำงานน้อยลง" />
     <meta name="theme-color" content="#1F2937" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Thai Smart" />
     
